objects/GEMS_Account_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>AEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Submission_Sub_Type__c</fullName>
        <label>Account Submission Sub-Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Submission_Type__c</fullName>
        <label>Account Submission Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Underwriter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Underwriter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCC_Product__c</fullName>
        <label>BCC Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Booklet_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Booklet Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Area_Processes__c</fullName>
        <label>Business Area/Processes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_HCA_CDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom HCA(CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSA_CDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSA (CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GEMS_Product__c</fullName>
        <label>GEMS Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSA_Blueprint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSA Blueprint(CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSA_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSA Custom(CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incetives_CDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incetives (CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Rule_Active_del__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field will describe whether the rule is active or not.</description>
        <label>Is Rule Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_account_Derivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is the account Derivated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_AEP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-AEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Prime_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Prime Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Rx__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy (Rx)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prime_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prime Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RBP_CDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RBP (CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VBID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VBID(CDHP)</label>
        <type>Checkbox</type>
    </fields>
    <label>GEMS Account Setting</label>
    <pluralLabel>GEMS Account Settings</pluralLabel>
</CustomObject>